# my-selenium-miniapp

./: .gitignore  README.md  pyproject.toml
src/selenium/: credentials-template.json  first.py  gui.py  main.py  portal-paths-template.json  scraper.py
