[project]
name = "selenium"
version = "0.1.0"
description = ""
authors = [
    {name = "marcsikor",email = "s223464@student.uek.krakow.pl"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "selenium", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
